--- a/main.html
+++ b/main.html
@@ -10,13 +10,12 @@
 	<!-- the entire body must be written by student -->
 	
 		<p>We can optimize a solution using both time and space optimization. To optimize a program</p>
-		<li>
-			We can reduce the time taken to run the program and increase the space occupied
-			<li>
-				We can reduce the memory usage of the program and increase it's total run time
-				<li>
-					We can reduce both time and space complexity by deploying relevant algorithms
+	<li>
+		<ol>We can reduce the time taken to run the program and increase the space occupied</ol>
+		<ol>We can reduce the memory usage of the program and increase it's total run time</ol>
+		<ol>We can reduce both time and space complexity by deploying relevant algorithms</ol>
 	</li>
+		
     <script type="text/javascript" src="./script.js">
 </script>
 
